--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "@types/react": "^16.7.20",
     "@types/react-dom": "^16.0.11",
     "gatsby": "^2.0.95",
+    "gatsby-plugin-react-helmet": "^3.0.5",
     "gatsby-plugin-sharp": "^2.0.18",
     "gatsby-plugin-typescript": "^2.0.3",
     "gatsby-remark-images": "^3.0.1",
+    "gatsby-remark-prismjs": "^3.2.3",
     "gatsby-source-filesystem": "^2.0.16",
     "gatsby-transformer-remark": "^2.2.0",
+    "prismjs": "^1.15.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
+    "react-helmet": "^5.2.0",
     "source-map-support": "^0.5.10",
     "ts-node": "^8.0.1"
   },
